# LEANN

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ASTCHUNK_INTEGRATION.md  LICENSE  MANYLINUX_BUILD_STRATEGY.md  README.md  benchmark_embeddings_simulated.py  build_mlx_index.py  check_pyzmq_wheels.py  demo.ipynb  knowledge.leann.meta.json  pyproject.toml
.github/workflows/: build-and-publish.yml  build-cibuildwheel.yml  build-reusable.yml  ci-cibuildwheel.yml  ci.yml  link-check.yml  release-manual.yml  test-manylinux.yml
apps/: base_rag_example.py  browser_rag.py  chunking_utils.py  code_rag.py  document_rag.py  email_rag.py  wechat_rag.py
apps/benchmarks/: __main__.py  faiss_only.py
apps/browser/: __main__.py  readers.py
apps/chunking/: __init__.py  utils.py
apps/documents/: __main__.py
apps/email/: __main__.py  readers.py
apps/email_data/: LEANN_email_reader.py
apps/evaluation/: __main__.py
apps/history_data/: __init__.py  history.py
apps/wechat/: __main__.py
benchmarks/: README.md  benchmark_no_recompute.py  compare_faiss_vs_leann.py  diskann_vs_hnsw_speed_comparison.py  faiss_only.py  generation_speed_bench.py  run_all.sh  run_evaluation.py  run_speed_bench_all.sh  simple_mac_tpt_test.py
benchmarks/bm25_diskann_baselines/: README.md  run_bm25.py  run_diskann.py
benchmarks/data/: .gitattributes  README.md
benchmarks/data/prompts_g5/: prompt_dump_gpqa_hnsw.txt  prompt_dump_hotpot_hnsw.txt  prompt_dump_nq_hnsw.txt  prompt_dump_trivia_hnsw.txt
benchmarks/enron_emails/: README.md  evaluate_enron_emails.py  setup_enron_emails.py
benchmarks/financebench/: README.md  evaluate_financebench.py  setup_financebench.py  verify_recall.py
benchmarks/laion/: README.md  evaluate_laion.py  setup_laion.py
data/: PrideandPrejudice.txt  huawei_pangu.md
docs/: ASTCHUNK_INTEGRATION.md  CONTRIBUTING.md  RELEASE.md  THINKING_BUDGET_FEATURE.md  ast_chunking_guide.md  claude-code-integration.md  configuration-guide.md  contributing.md  faq.md  features.md  metadata_filtering.md  normalized_embeddings.md  roadmap.md
docs/code/: embedding_model_compare.py
examples/: LEANN_email_reader.py  PARAMETER_CONSISTENCY.md  base_rag_example.py  basic_demo.py  browser_rag.py  compare_faiss_vs_leann.py  document_rag.py  document_search.py  email_rag.py  faiss_only.py  google_history_reader_leann.py  mail_reader_embedded_metadata.py  mail_reader_leann.py  mail_reader_llamaindex.py  main_cli_example.py  mlx_demo.py  multi_vector_aggregator.py  openai_hnsw_example.py  resue_index.py  run_evaluation.py  simple_demo.py  spoiler_free_book_rag.py  wechat_history_reader_leann.py  wechat_rag.py
examples/email_data/: LEANN_email_reader.py  email.py
examples/history_data/: __init__.py  history.py  wechat_history.py
research/micro/: analyze_HNSW.py  analyze_NSG.py  bnbtest.py  embedd_micro.py  embedd_micro_seq.py  int4benchmark.py  int8.py  llm_compress.py  nvmath_test.py  save_small_model.py  transformer-batching-benchmark.ipynb
research/micro/data/: transformer-batching-microbenchmarks.csv
research/paper_plot/: acc_fig.py  analyze_visits.py  b.md  cache_degree_data.py  disk_cache.py  gpu_under.py  graph_dist.py  graph_pruning_ablation.py  main_exp.py  main_latency.py  main_memory_storage.py  recompute_bottle.py  small_emb.py  speed_ablation.py
research/paper_plot/data/: acc.csv  big_graph_degree_data.npz  branches.csv  latency_ablation.csv  main_latency.csv  main_latency_small.csv  ram_storage.csv  swithc_e2e.csv  vary_cache.csv
research/utils/: .gitignore  analyze_diskann_graph.cpp  analyze_top3_positions.py  debug_embedd.py  dedup_eval_data.py  deduplication.py  demo_reader.cpp  diskann_degree_distribution.fish  download_mac.fish  embedding_comp.py  evaluate_results.py  experiment.md  extract_results.py  faiss.md  find_probe.py  generate_dataset_cache.fish  mem_monitor.fish  modelfile.fish  parse_logs_draw_skip_reorder.py  plot_degree_distribution.py  prepare_query_files.py  run_bm25.fish  run_recall_experiment.py  s3.md  seperate_hnsw_flat.py  simple_search.fish  subsample_data_new.py  timing.py
scripts/: build_and_test.sh  bump_version.sh  ci_debug_pytest.py  ci_pytest_wrapper.py  diagnose_hang.sh  hf_upload.py  release.sh  upload_to_pypi.sh
sky/: leann-build.yaml
test/: build_mlx_index.py  check_embedding_dimension.py  check_embedding_model.py  mail_reader_llamaindex.py  mail_reader_save_load.py  mail_reader_small_chunks.py  mail_reader_test.py  micro_tpt.py  query_saved_index.py  simple_mac_tpt_test.py
test/sanity_checks/: benchmark_embeddings.py  debug_zmq_issue.py
test_pdf_index/: pdf_documents.leann.meta.json
tests/: README.md  conftest.py  test_astchunk_integration.py  test_basic.py  test_ci_basic.py  test_ci_minimal.py  test_diskann_partition.py  test_document_rag.py  test_main_cli.py  test_metadata_filtering.py  test_readme_examples.py  test_timeout.py
tests/sanity_checks/: README.md  README_hnsw_pruning.md  benchmark_embeddings.py  test_distance_functions.py  test_hnsw_pruning.py  test_l2_verification.py  test_sanity_check.py
